--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fetch": "^1.1.0",
     "moment": "^2.29.1",
     "mssql": "^6.3.1",
+    "sequelize": "^6.6.2",
     "superagent": "^6.1.0",
     "superagent-use": "^0.1.0",
     "tedious": "^6.7.0"
