--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "fetch": "^1.1.0",
     "moment": "^2.29.1",
+    "msnodesqlv8": "^2.2.0",
     "mssql": "^6.3.1",
     "sequelize": "^6.6.2",
     "superagent": "^6.1.0",
